@@ -6,7 +6,8 @@ To do:
 	- stealth I/O and mem protect (done but not enabled)
 	
 - 19/03/2005, version 1.80q:
-	- ...
+	- [roms]  $985: updated copyright notice.
+	- [roms]  $990: set main window title (for TIGCC-IDE).
 
 - 12/03/2005, version 1.80p:
 	- [kevin] $933: increased link timeout from 1.5 to 10s.
